--- a/lib/envs.sty
+++ b/lib/envs.sty
@@ -41,7 +41,7 @@
     }
 
     \newcommand{\webidding}[1]{
-        \begin{tabular}{cc}
+        \begin{tabular}{ll}
             #1
         \end{tabular}
     }
