--- a/Konwencje/Acol-bez-kontroli/acol-bez-kontroli-2025.tex
+++ b/Konwencje/Acol-bez-kontroli/acol-bez-kontroli-2025.tex
@@ -1,51 +1,56 @@
-\documentclass[12pt, a4paper]{report}
+\documentclass[12pt, a4paper]{article}
+\usepackage[paperwidth=21cm,paperheight=70cm,margin=1in]{geometry}
 \usepackage{import}
 
 \import{../../lib/}{bridge.sty}
 \setmainlanguage{polish}
 
-\title{Acol bez kontroli - wersja 2025}
+\title{Acol with 2\diams relay}
 \author{Bartek Słupik}
 \begin{document}
 \maketitle
 
 
-\subsubsection{Podstawy}
+\subsubsection*{Basic stuff}
 
 \sequence{{2\clubs}}
 \begin{options}[2]
-    \item[2\diams] Automat
+    \item[2\diams] Relay
+    \item[2\hearts+] Natural 6+, no A/K outside bid suit
 \end{options}
 
 \sequence{{2\clubs}{2\diams}}
 \begin{options}[1]
 	\item[2\hearts] 5+\hearts \orr 25+ BAL \imp \qquad
 	\item[2\spades] 5+\spades
-	\item[2\nt] 23-24 BAL
-	\item[3\clubs\alrt] 6+\diams bez starszej czwórki \vimp
-	\item[3\diams\alrt] 5+\diams, 4\major \imp
-	\item[3\hearts] Samoustalenie
-	\item[3\spades] Samoustalenie
+	\item[2\nt] 23-24 BAL \br
+	\item[3\clubs\alrt] 6+\diams no 4\major \vimp
+	\item[3\diams\alrt] 5+\diams, 4\major \imp \br
+	\item[3\hearts] Sets trumps
+	\item[3\spades] Sets trumps
 	\item[3\nt\alrt] 5+/5+ \minor \vimp
-	\item[4\clubs] Samoustalenie
-	\item[4\diams] Samoustalenie
+	\item[4\clubs] Sets trumps
+	\item[4\diams] Sets trumps
 \end{options}
+
+We need to do something about thost pesky 5440s... maybe in another lifetime when they actually happen IRL.
 
 \sequence{{2\clubs}{2\diams}{2\hearts}}
 \begin{options}[2]
-	\item[2\spades\alrt] Automat
+	\item[2\spades\alrt] Relay
 \end{options}
 
 \sequence{{2\clubs}{2\diams}{2\spades}}
 \begin{options}[2]
-	\item[2\nt\alrt] Semi-automatyczne pytanie
-	\item[3\clubs\alrt] Słaba ręka bez fitu, która bardzo nie chce zajmować \nt
-	\item[3\spades] W podstawowej wersji - ustala kolor.
+	\item[2\nt\alrt] Semi-Relay
+	\item[3\clubs\alrt] Shit hand that does not want to declare \nt
+	\item[3\spades] Sets trumps with a rather balanced hand (does not care about opener's shape)
+	\item[4\spades] Total crap
 \end{options}
 
 
 
-\subsubsection{Transfery po pytaniu}
+\subsubsection*{Transfers after relays}
 \sequence{{2\clubs}{2\diams}{2\hearts}{2\spades}}
 \begin{options}[1]
 	\item[2\nt] 23-24 BAL
@@ -64,79 +69,68 @@
 \end{options}
 
 
-
-\subsubsection{Po transferze - przykłady (można grać już naturalnie)}
+\subsubsection*{Example bidding after transfers}
 \sequence{{2\clubs}{2\diams}{2\hearts}{2\spades}{3\clubs}}
 \begin{options}[2]
-	\item[3\diams] Fit \diams
-	\item[3\hearts] Dubel \hearts, w razie gdyby partner miał 6-4
-	\item[3\spades\alrt] Silne ustalenie kierów
-\end{options}
-
-\sequence{{2\clubs}{2\diams}{2\spades}{2\ntx}{3\hearts}}
-\begin{options}[2]
-	\item[3\spades] 2+\spades, ustala
-	\item[3\nt] Propozycja
+	\item[3\diams] Sets \diams
+	\item[3\hearts] 2\hearts (opener can have 6-4)
+	\item[3\spades\alrt] Transfer to \nt or strong with \hearts
 \end{options}
 
 
-
-\subsubsection{Acol na karach}
+\subsubsection*{Acol with \diams}
 \sequence{{2\clubs}{2\diams}{3\clubs}}
 \begin{options}[2]
-	\item[3\diams\alrt] Pytanie o krótkosć, ustala \diams
+	\item[3\diams\alrt] \lsf\ \textbf{does not set} \diams, \then 4\clubs is NAT, 4\diams SETS, 4\major SPL
 	\item[3\hearts] 5+\hearts
 	\item[3\spades] 5+\spades
 \end{options}
 
+// syyyyyf
 \sequence{{2\clubs}{2\diams}{3\diams}}
 \begin{options}[2]
-	\item[3\hearts] 4+\hearts
-	\item[3\spades] 4+\spades, brak 4\hearts
+	\item[3\hearts] 4+\spades \vimp
+	\item[3\spades] 4+\hearts \vimp
 \end{options}
 
-\sequence{{2\clubs}{2\diams}{3\diams}{3\hearts}}
-\begin{options}[1]
-	\item[3\spades] 4\spades
-	\item[4\clubs] Ustalenie kierów
-\end{options}
 
 
 \sequence{{2\clubs}{2\diams}{3\diams}{3\spades}}
 \begin{options}[1]
-	\item[4\clubs] Ustalenie pików
+	\item[4\clubs] SETS \hearts
 \end{options}
 
 
-
-\subsubsection{Acol na treflach - w otwarciu 1\clubs}
+\subsubsection*{Acol with \clubs - in 1\clubs opening}
 \sequence{{1\clubs}{1\hearts}}
 \begin{options}[1]
-	\item[2\spades\alrt] \gf na długich \clubs
+	\item[2\spades\alrt] \gf long \clubs
 \end{options}
 
 \sequence{{1\clubs}{1\spades}}
 \begin{options}[1]
-	\item[3\diams\alrt] \gf na długich \clubs
+	\item[3\diams\alrt] \gf long \clubs
 \end{options}
 
 \sequence{{1\clubs}{1\diams}}
 \begin{options}[1]
-	\item[2\diams\alrt] 5+\clubs, 4+\diams, ~19+PC \orr 6+\clubs, 19+PC (potem można nat)
+	\item[2\diams\alrt] 5+\clubs, 4+\major\ \gf \orr long \clubs\ \gf
+	\item[2\hearts] NAT \nf
+	\item[2\spades] NAT \nf  
+	\item[2\nt] 5\clubs, 4\diams 
 \end{options}
 
 \sequence{{1\clubs}{1\diams}{2\diams}}
 \begin{options}[2]
-	\item[2\hearts\alrt] Słaba ręka 0-4 PC
-	\item[2\spades\alrt] 5+PC \gf (2\nt \then\ \clubs, 3\clubs \then\ \diams)
+	\item[2\hearts\alrt] Relay
 \end{options}
 
 \sequence{{1\clubs}{1\diams}{2\diams}{2\hearts}}
 \begin{options}[1]
-	\item[2\spades\alrt] 19-22, 5\clubs 4\diams
-	\item[2\nt\alrt] 19+, 6+\clubs (automat 3\clubs \nf)
-	\item[3\clubs\alrt] 23+, 5\clubs 4\diams, \gf
+	\item[2\spades] NAT \gf
+	\item[2\nt] 6+\clubs
+	\item[3\clubs] very long \clubs
+	\item[3\diams] 4+\hearts   
 \end{options}
-
 
 \end{document}
